add room object and controller. change routes to work better

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -1,7 +1,7 @@
 ---
-Name: mysiteroutes
-After: framework/routes#coreroutes
+Name: rootroutes
 ---
 Director:
   rules:
-    '$Action/$ID': 'MainController'
+    '': 'MainController'
+    'room//$Action/$ID': 'RoomController'
