add in telstra sms api, gitignore to not commit api keys, registration controller

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -5,3 +5,4 @@ Director:
   rules:
     '': 'MainController'
     'room//$Action/$ID': 'RoomController'
+    'register//$Action/$ID': 'RegistrationController'
