--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -9,3 +9,7 @@ After:
 # Caution: Indentation through two spaces, not tabs
 SSViewer:
   theme: 'nexthit'
+  
+Member:
+  extensions:
+    - MemberExtension
