room object and add modeladmin.

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -3,6 +3,6 @@ Name: rootroutes
 ---
 Director:
   rules:
-    '': 'MainController'
     'room//$Action/$ID': 'RoomController'
     'register//$Action/$ID': 'RegistrationController'
+    '$Action': 'MainController'
