make ajax calls to lastfm for song info (WIP)

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -5,4 +5,5 @@ Director:
   rules:
     'room//$Action/$ID': 'RoomController'
     'register//$Action/$ID': 'RegistrationController'
+    'song': 'SongSearchController'
     '$Action': 'MainController'
